--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,3 +61,14 @@ input[type="submit"]:hover {
 .nav ul a:hover {
     background: #00b8eb;
 }
+
+.search form {
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    margin-bottom: 18px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
